RESOLVED FIXED195049
Fix warnings on ARM and MIPS
https://bugs.webkit.org/show_bug.cgi?id=195049
Summary Fix warnings on ARM and MIPS
Dominik Inführ
Reported 2019-02-26 07:49:15 PST
Fix warnings on ARM and MIPS
Attachments
Patch (7.03 KB, patch)
2019-02-26 07:51 PST, Dominik Inführ
no flags
Dominik Inführ
Comment 1 2019-02-26 07:51:12 PST
Mark Lam
Comment 2 2019-02-26 12:32:51 PST
Comment on attachment 362986 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362986&action=review r=me with fix. > Source/JavaScriptCore/tools/JSDollarVM.cpp:1464 > + candidateCodeBlock = static_cast<CodeBlock*>(value.asCell()); Let's use bitwise_cast here too.
Saam Barati
Comment 3 2019-02-26 14:06:42 PST
Comment on attachment 362986 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362986&action=review >> Source/JavaScriptCore/tools/JSDollarVM.cpp:1464 >> + candidateCodeBlock = static_cast<CodeBlock*>(value.asCell()); > > Let's use bitwise_cast here too. Why? My preference of casting is: 1. static_cast 2. bitwise_cast 3. reinterpret_cast
Mark Lam
Comment 4 2019-02-26 14:13:33 PST
Comment on attachment 362986 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362986&action=review >>> Source/JavaScriptCore/tools/JSDollarVM.cpp:1464 >>> + candidateCodeBlock = static_cast<CodeBlock*>(value.asCell()); >> >> Let's use bitwise_cast here too. > > Why? > My preference of casting is: > 1. static_cast > 2. bitwise_cast > 3. reinterpret_cast I just wasn't thinking correctly. I guess static_cast does a compile time type check, and hence, is preferable to bitwise_cast which only does a size check. I withdraw my comment.
WebKit Commit Bot
Comment 5 2019-02-26 14:40:08 PST
Comment on attachment 362986 [details] Patch Clearing flags on attachment: 362986 Committed r242109: <https://trac.webkit.org/changeset/242109>
WebKit Commit Bot
Comment 6 2019-02-26 14:40:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-02-26 14:46:31 PST
Guillaume Emont
Comment 8 2019-02-27 05:37:35 PST
*** Bug 188598 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.